...
                android:layout_margin="8dp"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif-condensed"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textSize="12sp"
                app:date="@{tweet.createdAt}"
                app:layout_constraintBottom_toBottomOf="@+id/btnViewTweet"
                app:layout_constraintEnd_toStartOf="@+id/btnViewTweet"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnViewTweet"
                tools:text="jan 20" />

            <Button
...
